
NEWS file for package readJDX
Import data in the JCAMP-DX format.
URL: github.com/bryanhanson/readJDX

Changes in version 0.3.215 2017-01-24
     + Improvements to vignette and documentation.
     + Improvements to the debugging output options.

Changes in version 0.3.194 2017-01-23
     + Return structure now includes the comment only lines found outside of the metadata.
     + Much more robust handling of comments.
     + All test files seem to work.
     + Still a lot of polishing needed.

Changes in version 0.3.103 2017-01-13
     + Return structure now includes a data guide giving the lines where each piece of the file was parsed (improves error reporting, but needs further tweaking).
     + Will now read 2D NMR spectra in NTUPLES format (at least in the only case I have available right now).
     + Updated vignette to pinp style.  

Changes in version 0.2.1 2016-12-21
     + Fixed issue #3, problem with x values not having the correct absolute value.  Reported by Rustam.
     + Added checks for FIRSTX, LASTX.
     + Added PCRF.JDX, SBO.JDX and SBO.JDX to inst/extdata for example purposes.
     + Internal tolerance checking was made more precise.
     + Switched to using separate x and y tolerances internally.

Changes in version 0.1.32 2016-10-21
     + findDataTable renamed to findDataTables to better reflect what it does.
     + Added an argument SOFC with default TRUE.  SOFC = stop on failed check.  As currently implemented, it skips the FIRSTY check.  Suggested by Rustam as some JCAMP writers do not put FIRSTY into the file.
     + Many additions to the decompression code based on additional testing, which uncovered some previously unseen issues.  There are still some files that won't process; these will require time to troubleshoot.

Changes in version 0.1.0 2016-08-19
     + First draft of package.  Works on a wide variety of example files.
     + First release to GitHub.
