@@ -3,6 +3,9 @@ NEWS file for package readJDX
 Import data in the JCAMP-DX format.
 URL: github.com/bryanhanson/readJDX
 
+Changes in version 
+     + Rebuilt how duplicates are handled, so that S2, which is a valid DUP string = 12, is handled correctly.
+
 Changes in version 0.3.215 2017-01-24
      + Improvements to vignette and documentation.
      + Improvements to the debugging output options.
